--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
 am-scratch/*
 data/am-data-scratch/*
-nlp-preprocessing*
 data/GDELT_1.0/*
 .ipynb_checkpoints/
 __pycache__/
-stockgossip.key
-stockgossip.pdf
-tests/.cache/
-.cache/
+presentations/*
